Added description. Minor changes in test.

--- a/test/index.html
+++ b/test/index.html
@@ -3,18 +3,17 @@
 
 <head>
 	<meta charset="utf-8">
-<script src="./js/loadseq.js">
-
-</script>
+	<script src="./js/loadseq.js"></script>
 
 <script>
-console.log("AAAA");
+
+console.log("LOADSEQ TEST");
 loadseq(["./js/jq.js",   "./js/js1.js",   "./js/js2.js",   "./js/js3.js",   "./js/js4.js",   "./js/js5.js",   "./js/js6.js",   "./js/js7.js",   "./js/js8.js"]);
 </script>
 
 </head>
 <html>
 
-Test
+LOADSEQ TEST
 
 </html>
